# llama.cpp

docs/ops/: METAX.csv
ggml/: CMakeLists.txt
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-cuda/: common.cuh  ggml-cuda.cu  mmf.cu  mmq.cu  mmvf.cu  mmvq.cu  quantize.cu  quantize.cuh
ggml/src/ggml-metax/: CMakeLists.txt  ggml-metax-compat.cuh  ggml-metax-fattn-stubs.cu  mmf-stubs.cu  mmq-stubs.cu  patch-ggml-cuda-cu.py  quantize.cu
ggml/src/ggml-metax/ggml-cuda/: fattn.cuh  mmf.cuh  mmq.cuh  quantize.cuh
